fixed formatting issue on smaller screens

--- a/css/main.css
+++ b/css/main.css
@@ -106,13 +106,13 @@ body {
   font-size: 1.25em;
   height: 100%;
   color: #fff;
+  background-color: #000;
 }
 
 
 header,
 footer,
 main {
-    height: auto;
     border: 2px solid #614bf2;
     padding: 0 10px;
     margin: 5px 5px;
@@ -128,9 +128,9 @@ main {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
-  justify-content: space-between;
-  background-color: #000;
-  padding: 10px;
+  justify-content: space-around;
+  margin: 5px;
+  
 }
 
 .flex-items {
@@ -138,18 +138,20 @@ main {
   line-height: 1em;
   font-size: .9em;
   width: 30%;
-  height: auto;
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  padding: 0 .5em;
 }
 
-#div-1 {
+.flex-items p{
+    padding: 0 16px 0 0;
+} 
+
+#div-1 p{
     border-right: 1px solid #614bf2;
 }
 
-#div-2 {
+#div-2 p{
     border-right: 1px solid #614bf2;
 }
 
